@@ -5,7 +5,7 @@
   <groupId>org.geonetwork-opensource</groupId>
   <artifactId>geonetwork</artifactId>
   <packaging>pom</packaging>
-  <version>2.11.0-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <name>GeoNetwork opensource</name>
   <description>GeoNetwork opensource is a standards based, Free and
     Open Source catalog application to manage spatially referenced
@@ -13,14 +13,14 @@
   <url>http://geonetwork-opensource.org</url>
   <scm>
     <connection>
-      scm:svn:https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/trunk
+      scm:git:https://github.com/geonetwork/core-geonetwork
     </connection>
-    <url>https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/trunk</url>
+    <url>https://github.com/geonetwork/core-geonetwork</url>
   </scm>
   <inceptionYear>2003</inceptionYear>
   <issueManagement>
-    <system>trac</system>
-    <url>http://trac.osgeo.org/geonetwork/report</url>
+    <system>GitHub Issues</system>
+    <url>https://github.com/geonetwork/core-geonetwork/issues</url>
   </issueManagement>
   <mailingLists>
     <mailingList>
@@ -182,6 +182,11 @@
             <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-eclipse-plugin</artifactId>
+          <version>2.9</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -260,6 +265,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
         <configuration>
           <encoding>UTF-8</encoding>
         </configuration>
@@ -325,27 +331,46 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.16</version>
             <configuration>
+                <argLine>-Dfile.encoding=UTF-8  -Xmx512M -XX:MaxPermSize=128M</argLine>
+                <forkCount>4</forkCount>
                 <excludes>
-                    <exclude>**/*IntegrationTest.java</exclude>
+                    <exclude>**/*PerformanceTest.java</exclude>
                 </excludes>
-                <argLine>-Dfile.encoding=UTF-8</argLine>
-                <forkCount>1</forkCount>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>jrebel-maven-plugin</artifactId>
+            <version>1.1.5</version>
+            <configuration>
+                <addResourcesDirToRebelXml>true</addResourcesDirToRebelXml>
+                <alwaysGenerate>true</alwaysGenerate>
             </configuration>
             <executions>
                 <execution>
-                    <id>integration-test</id>
+                    <id>generate-rebel-xml</id>
+                    <phase>process-resources</phase>
                     <goals>
-                        <goal>test</goal>
+                        <goal>generate</goal>
                     </goals>
-                    <phase>integration-test</phase>
-                    <configuration>
-                        <excludes>
-                            <exclude>none</exclude>
-                        </excludes>
-                        <includes>
-                            <include>**/*IntegrationTest.java</include>
-                        </includes>
-                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>jrebel-maven-plugin</artifactId>
+            <version>1.1.5</version>
+            <configuration>
+                <addResourcesDirToRebelXml>false</addResourcesDirToRebelXml>
+                <alwaysGenerate>true</alwaysGenerate>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>generate-rebel-xml</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                        <goal>generate</goal>
+                    </goals>
                 </execution>
             </executions>
         </plugin>
@@ -398,6 +423,13 @@
             <artifactId>sardine</artifactId>
             <version>5.1-GEONETWORK</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.3.7</version>
+        </dependency>
+
       <!-- universal character set detector -->
       <dependency>
         <groupId>com.googlecode.juniversalchardet</groupId>
@@ -551,7 +583,7 @@
       <dependency>
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
-        <version>2.7.1</version>
+        <version>2.11.0</version>
       </dependency>
 			<!-- Patched XML Resolver 1.2 from apache xml-commons - fixes problems
 			     with windows URLs -->
@@ -599,16 +631,6 @@
         <groupId>org.apache.jcs</groupId>
         <artifactId>jcs</artifactId>
         <version>1.3</version> <!-- TODO check version -->
-      </dependency>
-      <dependency>
-        <groupId>jfree</groupId>
-        <artifactId>jfreechart</artifactId>
-        <version>1.0.0</version>
-      </dependency>
-      <dependency>
-        <groupId>jfree</groupId>
-        <artifactId>jcommon</artifactId>
-        <version>1.0.15</version>
       </dependency>
       <!-- May be required to register connection unwrappers with
 			     geotools
@@ -914,16 +936,6 @@
         <version>${spring.version}</version>
       </dependency>
       <dependency>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-aop</artifactId>
-          <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-            <groupId>aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.5.2</version>
-      </dependency>
-      <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-core</artifactId>
         <version>${spring.security.version}</version>
@@ -1009,6 +1021,17 @@
           <artifactId>xom</artifactId>
           <version>1.1</version>
       </dependency>
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>flying-saucer-pdf-itext5</artifactId>
+            <version>${flying-saucer}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.itextpdf</groupId>
+                    <artifactId>itextpdf</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -1027,6 +1050,12 @@
       <!-- The version number is specified above. -->
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.google.jimfs</groupId>
+          <artifactId>jimfs</artifactId>
+          <version>1.0</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <!-- ================================================================== -->
@@ -1046,10 +1075,20 @@
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
+      <id>boundless</id>
+      <name>Boundless repository</name>
+      <url>http://repo.boundlessgeo.com/main/</url>
+    </repository>
+     <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
       <id>k-int</id>
       <name>Developer k-int repository</name>
       <url>http://developer.k-int.com/maven2/</url>
     </repository>
+
+    
     <repository>
       <snapshots>
         <enabled>true</enabled>
@@ -1061,6 +1100,7 @@
       <name>GeoNetwork remote repository</name>
       <url>https://raw.githubusercontent.com/geonetwork/core-maven-repo/master</url>
     </repository>
+    
     <repository>
       <id>mvnrepository.com</id>
       <name>Repository that has juniversalchardet</name>
@@ -1091,46 +1131,43 @@
   <modules>
     <module>common</module>
     <module>cachingxslt</module>
-    <module>jeeves</module>
     <module>sde</module>
-    <module>web-ui</module>
-    <module>web-ui-docs</module>
     <module>domain</module>
     <module>oaipmh</module>
+    <module>events</module>
     <module>core</module>
+    <module>schemas</module>
     <module>csw-server</module>
     <module>harvesters</module>
     <module>healthmonitor</module>
     <module>services</module>
-    <module>web-client</module>
     <module>wro4j</module>
-    <module>web</module>
-    <module>e2e-tests</module>
+    <module>inspire-atom</module>
   </modules>
 
   <profiles>
+    <profile>
+      <id>all</id>
+      <activation>
+        <file>
+          <exists>pom.xml</exists>
+        </file>
+      </activation>
+      <modules>
+        <module>schemas-test</module>
+        <module>web-ui</module>
+        <module>web-ui-docs</module>
+        <module>web-client</module>
+        <module>web</module>
+        <module>e2e-tests</module>
+        <module>geoserver</module>
+      </modules>
+    </profile>
     <!-- Python and Latex are required to build the documentation. -->
     <profile>
       <id>with-doc</id>
       <modules>
         <module>docs</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>itests</id>
-      <modules>
-        <module>web-itest</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>geoserver</id>
-      <activation>
-        <file>
-          <exists>geoserver/pom.xml</exists>
-        </file>
-      </activation>
-      <modules>
-        <module>geoserver</module>
       </modules>
     </profile>
     <profile>
@@ -1159,9 +1196,10 @@
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH'\:'mm'\:'ssZ</maven.build.timestamp.format>
     <build.timestamp>${maven.build.timestamp}</build.timestamp>
     <rootProjectDir>..</rootProjectDir>
-    <wro.version>1.7.1</wro.version>
+    <wro.version>1.7.7</wro.version>
     <node.version>v0.10.24</node.version>
     <npm.version>1.3.23</npm.version>
-    <print-lib.version>2.0.0</print-lib.version>
+    <print-lib.version>2.1.0</print-lib.version>
+    <flying-saucer>9.0.7</flying-saucer>
   </properties>
 </project>
